GA: Code coverage clash med argLine argument maven-surefire-plugin?