@@ -634,10 +634,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M5</version>
-                    <configuration>
-                        <argLine>-Xms256m -Dfile.encoding=UTF-8 -Dlog.level.no.nav=WARN</argLine>
-                        <argLine>--illegal-access=permit</argLine>
-                    </configuration>
+<!--                    <configuration>-->
+<!--                        <argLine>-Xms256m -Dfile.encoding=UTF-8</argLine>-->
+<!--                    </configuration>-->
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
